--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -27,6 +27,8 @@ jobs:
 
     - name: Build the project
       run: npm run build
+      env:
+        API_URL: "http://192.168.51.50:3005"
 
     - name: Copy files
       run: |
