--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.3.3",
     "cheerio": "^1.0.0",
     "express": "^4.21.1",
+    "final-form-arrays": "^3.1.0",
     "firebase": "^11.1.0",
     "html-recipe-parser": "^1.0.15",
     "jsonld": "^8.3.2",
@@ -26,6 +27,8 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
+    "react-final-form": "^6.5.9",
+    "react-final-form-arrays": "^3.1.4",
     "react-router-dom": "^7.0.2",
     "uuid": "^11.0.3",
     "vite-plugin-bootstrap": "^5.2.3"
