--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.1",
+    "@mui/x-date-pickers": "^7.23.3",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "final-form": "^4.20.10",
     "final-form-arrays": "^3.1.0",
     "firebase": "^11.1.0",
+    "material-ui-popup-state": "^5.3.3",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
