--- a/package.json
+++ b/package.json
@@ -18,25 +18,19 @@
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.1",
     "@mui/x-date-pickers": "^7.23.3",
-    "@popperjs/core": "^2.11.8",
     "axios": "^1.7.7",
-    "bootstrap": "^5.3.3",
     "final-form": "^4.20.10",
     "final-form-arrays": "^3.1.0",
     "firebase": "^11.1.0",
-    "material-ui-popup-state": "^5.3.3",
     "moment": "^2.30.1",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-final-form": "^6.5.9",
     "react-final-form-arrays": "^3.1.4",
-    "react-router-dom": "^7.0.2",
-    "uuid": "^11.0.3"
+    "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
-    "@types/bootstrap": "^5.2.10",
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
