--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.21.0",
+    "@typescript-eslint/parser": "^8.21.0",
     "@vitejs/plugin-react-swc": "^3.7.2",
-    "eslint": "^9.9.0",
+    "eslint": "^9.18.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
@@ -44,6 +46,7 @@
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
+    "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-pwa": "^0.21.1"
   }
 }
